crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__cold_reference.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> error
in
case@Bool true of
  True -> 42
  False -> outer#1 0
--- core after
letrec
  outer#1 : int -> int [static []] = \x#3 : int -> error
in
case@Bool true of
  True -> 42
  False -> outer#1 0
--- uplc before
(program 1.1.0
  [(lam outer_1 (case (con bool True) [outer_1 (con integer 0)] (con integer 42)))
    [(lam self_13 [self_13 self_13]) (lam self_13 (lam x_3 (error)))]])
--- uplc after
(program 1.1.0
  [(lam outer_1 (case (con bool True) [outer_1 (con integer 0)] (con integer 42)))
    [(lam self_15 [self_15 self_15]) (lam self_15 (lam x_3 (error)))]])
--- result
(con integer 42)
--- logs
[]
