crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__delayed_capture.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
force (letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
  dead#2 : int -> int [static []] = \z#5 : int -> error
in
delay (f#1 40 2))
--- core after
force (letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
in
delay (f#1 40 2))
--- uplc before
(program 1.1.0
  (force
    [(lam dispatch_40
      [(lam f_1
        [(lam dead_2 (delay [[f_1 (con integer 40)] (con integer 2)]))
          (lam z_50 [dispatch_40 (constr 1 dispatch_40 z_50)])])
        (lam x_51 (lam y_52 [dispatch_40 (constr 0 dispatch_40 x_51 y_52)]))])
      (lam request_41
        (case
          request_41
          (lam self_42 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))
          (lam self_46 (lam z_5 (error)))))]))
--- uplc after
(program 1.1.0
  (force
    [(lam f_1 (delay [[f_1 (con integer 40)] (con integer 2)]))
      [(lam self_53 [self_53 self_53])
        (lam self_53 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))]]))
--- result
(con integer 42)
--- logs
[]
