crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__live_delayed_worker.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  worker#1 : @delay int [static []] = \ -> delay (case@Bool true of
    True -> 42
    False -> force worker#1)
in
force worker#1
--- core after
letrec
  worker#1 : @delay int [static []] = \ -> delay (case@Bool true of
    True -> 42
    False -> force worker#1)
in
force worker#1
--- uplc before
(program 1.1.0
  [(lam worker_1 (force worker_1))
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (delay (case (con bool True) (force [self_3 self_3]) (con integer 42))))]])
--- uplc after
(program 1.1.0
  [(lam worker_1 (force worker_1))
    [(lam self_4 [self_4 self_4])
      (lam self_4
        (delay (case (con bool True) (force [self_4 self_4]) (con integer 42))))]])
--- result
(con integer 42)
--- logs
[]
