crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__nested_dead_capture.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  outer#5 : int -> int [static []] = \x#7 : int -> x#7
in
letrec
  inner#6 : int -> int [static []] = \y#8 : int -> outer#5 y#8
in
42
--- core after
42
--- uplc before
(program 1.1.0
  [(lam outer_5
    [(lam inner_6 (con integer 42))
      [(lam self_9 [self_9 self_9]) (lam self_9 (lam y_8 [outer_5 y_8]))]])
    [(lam self_11 [self_11 self_11]) (lam self_11 (lam x_7 x_7))]])
--- uplc after
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
