crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__partial.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
(letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
  dead#2 : int -> int [static []] = \z#5 : int -> error
in
f#1 40) 2
--- core after
(letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
in
f#1 40) 2
--- uplc before
(program 1.1.0
  [[(lam dispatch_24
    [(lam f_1
      [(lam dead_2 [f_1 (con integer 40)])
        (lam z_34 [dispatch_24 (constr 1 dispatch_24 z_34)])])
      (lam x_35 (lam y_36 [dispatch_24 (constr 0 dispatch_24 x_35 y_36)]))])
    (lam request_25
      (case
        request_25
        (lam self_26 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))
        (lam self_30 (lam z_5 (error)))))]
    (con integer 2)])
--- uplc after
(program 1.1.0
  [[(lam f_1 [f_1 (con integer 40)])
    [(lam self_37 [self_37 self_37])
      (lam self_37 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))]]
    (con integer 2)])
--- result
(con integer 42)
--- logs
[]
