crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__reachable_failure.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  f#1 : int -> int [static []] = \x#2 : int -> trace "failure" in error
in
f#1 42
--- core after
letrec
  f#1 : int -> int [static []] = \x#2 : int -> trace "failure" in error
in
f#1 42
--- uplc before
(program 1.1.0
  [(lam f_1 [f_1 (con integer 42)])
    [(lam self_3 [self_3 self_3])
      (lam self_3
        (lam x_2
          (force [[(force (builtin trace)) (con string "failure")] (delay (error))])))]])
--- uplc after
(program 1.1.0
  [(lam f_1 [f_1 (con integer 42)])
    [(lam self_5 [self_5 self_5])
      (lam self_5
        (lam x_2
          (force [[(force (builtin trace)) (con string "failure")] (delay (error))])))]])
--- result
error: ExplicitErrorTerm
--- logs
["failure"]
