crates/nash-codegen/src/snapshots/nash_codegen__dead_recursive_tests__returned.snap
---
source: crates/nash-codegen/src/dead_recursive_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
(letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
  dead#2 : int -> int [static []] = \z#5 : int -> error
in
f#1) 40 2
--- core after
(letrec
  f#1 : int -> int -> int [static []] = \x#3 : int y#4 : int -> addInteger x#3 y#4
in
f#1) 40 2
--- uplc before
(program 1.1.0
  [[[(lam dispatch_6
    [(lam f_1 [(lam dead_2 f_1) (lam z_16 [dispatch_6 (constr 1 dispatch_6 z_16)])])
      (lam x_17 (lam y_18 [dispatch_6 (constr 0 dispatch_6 x_17 y_18)]))])
    (lam request_7
      (case
        request_7
        (lam self_8 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))
        (lam self_12 (lam z_5 (error)))))]
    (con integer 40)]
    (con integer 2)])
--- uplc after
(program 1.1.0
  [[[(lam f_1 f_1)
    [(lam self_19 [self_19 self_19])
      (lam self_19 (lam x_3 (lam y_4 [[(builtin addInteger) x_3] y_4])))]]
    (con integer 40)]
    (con integer 2)])
--- result
(con integer 42)
--- logs
[]
